--- a/PInvoke/PInvoke.csproj
+++ b/PInvoke/PInvoke.csproj
@@ -37,7 +37,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>QabcPlayMidi.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>PInvoke.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -54,7 +54,7 @@
     <Compile Include="WindowsStylesEx.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="QabcPlayMidi.snk" />
+    <None Include="PInvoke.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
