Renamed to remove "Irony" from name; and tidied up PGIrony usings.

--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PGSoftwareSolutionsInc.Util.PlayWaveLib</RootNamespace>
-    <AssemblyName>QABCIronyParser</AssemblyName>
+    <AssemblyName>QABCParser</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -33,7 +33,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\QABCIronyParser.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\QABCParser.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
