--- a/Parser/QabcParser.csproj
+++ b/Parser/QabcParser.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{2CBCABF6-0B20-43A9-96BD-7CD69C9023B9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PGSoftwareSolutionsInc.Util.PlayWaveLib</RootNamespace>
+    <RootNamespace>PGSoftwareSolutions.Util.PlayWaveLib</RootNamespace>
     <AssemblyName>QABCParser</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <TargetFrameworkProfile>
@@ -23,7 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\QABCIronyParser.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\QABCParser.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -49,6 +49,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,28 +57,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AstCustom\AbstractAstNode.cs" />
+    <Compile Include="AstCustom\AstContext.cs" />
+    <Compile Include="AstCustom\AstNode.cs" />
+    <Compile Include="AstCustom\DataLiteralBase.cs" />
+    <Compile Include="AstCustom\Grammar.cs" />
+    <Compile Include="AstCustom\LogMessage.cs" />
+    <Compile Include="AstCustom\NonTerminals.cs" />
+    <Compile Include="AstCustom\RegexBasedTerminalX.cs" />
+    <Compile Include="AstCustom\Terminals.cs" />
     <Compile Include="AwareNote.cs" />
+    <Compile Include="GlobalExtensions.cs" />
     <Compile Include="KeySpec.cs" />
+    <Compile Include="Music\IMusicParser.cs" />
+    <Compile Include="Music\Note.cs" />
+    <Compile Include="Music\Notes.cs" />
+    <Compile Include="Music\Tune.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QabcAstContext.cs" />
     <Compile Include="QabcAstNode.cs" />
     <Compile Include="QabcGrammar.cs" />
     <Compile Include="QabcIronyParser.cs" />
     <Compile Include="QabcKey.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Music\Music.csproj">
-      <Project>{7d1bfd3b-d1de-44ff-914c-5e216309e5d9}</Project>
-      <Name>Music</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PGIrony\PGIrony.csproj">
-      <Project>{970150db-b109-4f5d-9f0b-af8921b3d7f1}</Project>
-      <Name>PGIrony</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Util\Util.csproj">
-      <Project>{82F1BDD6-4BA9-493F-A778-9E3E5E93D254}</Project>
-      <Name>Util</Name>
-    </ProjectReference>
+    <Compile Include="WindowsStylesEx.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="QabcParser.snk" />
