Reference Irony.NET from NuGet.

--- a/Parser/QabcParser.csproj
+++ b/Parser/QabcParser.csproj
@@ -44,8 +44,9 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Irony">
-      <HintPath>..\..\bin\Irony\Release\Irony.dll</HintPath>
+    <Reference Include="Irony, Version=1.0.0.0, Culture=neutral, PublicKeyToken=ca48ace7223ead47, processorArchitecture=MSIL">
+      <HintPath>..\..\QabcPlayer\packages\Irony.0.9.1\lib\net40\Irony.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -82,6 +83,7 @@
     <Compile Include="WindowsStylesEx.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="QabcParser.snk" />
     <None Include="Sample Tunes\Can You Recognize It.qabc" />
     <None Include="Sample Tunes\Doe, A Deer.qabc" />
